{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 239,
  "lineage": "20253948-e6f9-641b-4b65-46d4c4323bf1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0701e21c502689c31",
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:instance/i-0a3ccb3e1681a4abc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3ccb3e1681a4abc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "common_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e3c6116a930e1caf",
            "private_dns": "ip-10-1-0-108.ap-northeast-1.compute.internal",
            "private_ip": "10.1.0.108",
            "public_ip": "18.183.245.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a6aeff2555c86cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb56c4e6502f8e14",
            "tags": {
              "Name": "sample-hito-ec2-1"
            },
            "tags_all": {
              "Name": "sample-hito-ec2-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b6893cdeab3add37",
              "sg-0ea1c0f4de375bac1"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-http",
            "aws_security_group.sg-ssh",
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0701e21c502689c31",
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:instance/i-038f5dfae8f262d46",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038f5dfae8f262d46",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "common_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b1fec36d0de5ae71",
            "private_dns": "ip-10-1-0-61.ap-northeast-1.compute.internal",
            "private_ip": "10.1.0.61",
            "public_ip": "54.168.168.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e712cf8995400b18",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb56c4e6502f8e14",
            "tags": {
              "Name": "sample-hito-ec2-2"
            },
            "tags_all": {
              "Name": "sample-hito-ec2-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b6893cdeab3add37",
              "sg-0ea1c0f4de375bac1"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-http",
            "aws_security_group.sg-ssh",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:internet-gateway/igw-0548672373a72e518",
            "id": "igw-0548672373a72e518",
            "owner_id": "296066267476",
            "tags": {
              "Name": "sample-hito-igw"
            },
            "tags_all": {
              "Name": "sample-hito-igw"
            },
            "vpc_id": "vpc-064690b1d827c4529"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:route-table/rtb-0b6d715264a99613a",
            "id": "rtb-0b6d715264a99613a",
            "owner_id": "296066267476",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0548672373a72e518",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-hito-rtb"
            },
            "tags_all": {
              "Name": "sample-hito-rtb"
            },
            "vpc_id": "vpc-064690b1d827c4529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0955ae5786acab3d9",
            "route_table_id": "rtb-0b6d715264a99613a",
            "subnet_id": "subnet-0eb56c4e6502f8e14"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:security-group/sg-0b6893cdeab3add37",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6893cdeab3add37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-hito-sg-http",
            "name_prefix": "",
            "owner_id": "296066267476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-hito-sg-http"
            },
            "tags_all": {
              "Name": "sample-hito-sg-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-064690b1d827c4529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:security-group/sg-0ea1c0f4de375bac1",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea1c0f4de375bac1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-hito-sg-ssh",
            "name_prefix": "",
            "owner_id": "296066267476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-hito-sg-ssh"
            },
            "tags_all": {
              "Name": "sample-hito-sg-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-064690b1d827c4529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:subnet/subnet-0eb56c4e6502f8e14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0eb56c4e6502f8e14",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296066267476",
            "tags": {
              "Name": "sample-hito-sbn-1a"
            },
            "tags_all": {
              "Name": "sample-hito-sbn-1a"
            },
            "vpc_id": "vpc-064690b1d827c4529"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:296066267476:vpc/vpc-064690b1d827c4529",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e0cc86e60c3cd7bd",
            "default_route_table_id": "rtb-009bbb6620004ddef",
            "default_security_group_id": "sg-05ae821246d3eb111",
            "dhcp_options_id": "dopt-053c0fa1f2f5deb1b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-064690b1d827c4529",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-009bbb6620004ddef",
            "owner_id": "296066267476",
            "tags": {
              "Name": "sample-hito-vpc"
            },
            "tags_all": {
              "Name": "sample-hito-vpc"
            }
          }
        }
      ]
    }
  ]
}